--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,15 @@
                     <div id="uploadResult"></div>
                 </div>
             </div>
+
+            <div id="analytics" class="tab-content">
+                <div class="chart-container">
+                    <h2>System Analytics</h2>
+                    <div id="analyticsContent">
+                        <p>Loading analytics...</p>
+                    </div>
+                </div>
+            </div>
             
 
         </div>
