--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,26 @@
                     </div>
                 </div>
             </div>
+
+            <div id="training" class="tab-content">
+                <div class="drawing-container">
+                    <h2>Model Training Configuration</h2>
+                    
+                    <div style="margin: 20px 0;">
+                        <label><input type="checkbox" id="useAugmentation" checked> Use Data Augmentation</label><br>
+                        <label><input type="checkbox" id="useHyperparameter"> Use Hyperparameter Tuning</label>
+                    </div>
+
+                    <div style="margin: 20px 0;">
+                        <label>Epochs: <input type="number" id="epochs" value="50" min="10" max="200" style="width: 100px;"></label><br>
+                        <label>Batch Size: <input type="number" id="batchSize" value="32" min="16" max="128" style="width: 100px;"></label>
+                    </div>
+
+                    <button class="btn btn-success" onclick="startTraining()">🚀 Start Training</button>
+                    
+                    <div id="trainingStatus"></div>
+                </div>
+            </div>
             
 
         </div>
