--- a/templates/index.html
+++ b/templates/index.html
@@ -88,6 +88,8 @@
                     <div id="trainingStatus"></div>
                 </div>
             </div>
+
+            <div id="toast" class="toast"></div>
             
 
         </div>
