--- a/templates/index.html
+++ b/templates/index.html
@@ -456,4 +456,13 @@
         </div>
         
     </body>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+
+        
+    
+    </script>
+
+
 </html>
