--- a/templates/index.html
+++ b/templates/index.html
@@ -460,7 +460,9 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
 
-        
+        let canvas, ctx;
+        let isDrawing = false;
+        let currentUser = 1;
     
     </script>
 
