--- a/templates/index.html
+++ b/templates/index.html
@@ -506,6 +506,10 @@
             ctx.lineTo(e.clientX - rect.left, e.clientY - rect.top);
             ctx.stroke();
         }
+
+        function stopDrawing() {
+            isDrawing = false;
+        }
     
     </script>
 
