--- a/templates/index.html
+++ b/templates/index.html
@@ -510,6 +510,16 @@
         function stopDrawing() {
             isDrawing = false;
         }
+
+        function handleTouch(e) {
+            e.preventDefault();
+            const touch = e.touches[0];
+            const mouseEvent = new MouseEvent(e.type === 'touchstart' ? 'mousedown' : 'mousemove', {
+                clientX: touch.clientX,
+                clientY: touch.clientY
+            });
+            canvas.dispatchEvent(mouseEvent);
+        }
     
     </script>
 
