--- a/templates/index.html
+++ b/templates/index.html
@@ -520,6 +520,12 @@
             });
             canvas.dispatchEvent(mouseEvent);
         }
+
+        function clearCanvas() {
+            ctx.fillStyle = 'white';
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
+            document.getElementById('drawingResult').innerHTML = '';
+        }
     
     </script>
 
