--- a/templates/index.html
+++ b/templates/index.html
@@ -635,6 +635,13 @@
             });
         }
 
+        function handleFileSelect(event) {
+            const file = event.target.files[0];
+            if (file) {
+                handleFile(file);
+            }
+        }
+
     
     </script>
 
