--- a/templates/index.html
+++ b/templates/index.html
@@ -807,6 +807,16 @@
             }
         }
 
+        function showToast(message, type = 'success') {
+            const toast = document.getElementById('toast');
+            toast.textContent = message;
+            toast.className = `toast ${type} show`;
+
+            setTimeout(() => {
+                toast.classList.remove('show');
+            }, 3000);
+        }
+
     
     </script>
 
